--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-devbliss",
-  "description": "The best Grunt plugin ever.",
+  "description": "The Devbliss GRUNT Plugin",
   "version": "0.1.0",
   "homepage": "https://github.com/devbliss/ecosystem-grunt-plugin",
   "author": {
