--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "bugs": {
     "url": "https://github.com/devbliss/ecosystem-grunt-plugin/issues"
   },
+  "main": "tasks/devbliss.js",
   "licenses": [
     {
       "type": "Apache",
@@ -46,5 +47,10 @@
   },
   "keywords": [
     "gruntplugin"
-  ]
+  ],
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bower-install": "^1.6.0",
+    "load-grunt-tasks": "^1.0.0"
+  }
 }
