--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "node test/test.js"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.9.2",
