--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "grunt-connect-proxy": "~0.1.10",
+    "grunt-connect-rewrite": "^0.2.1",
+    "grunt-contrib-connect": "~0.5.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
