--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "test": "node test/test.js"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "string": "^3.0.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
