--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "grunt-wiredep": "^2.0.0",
     "grunt-connect-proxy": "~0.1.10",
     "grunt-connect-rewrite": "^0.2.1",
-    "grunt-contrib-connect": "~0.5.0"
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.2"
   }
 }
