--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "grunt-connect-proxy": "~0.1.10",
     "grunt-connect-rewrite": "^0.2.1",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.2"
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-recess": "^0.7.0"
   }
 }
