--- a/package.json
+++ b/package.json
@@ -37,20 +37,19 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-internal": "^0.4.12",
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "0.4.x"
   },
   "keywords": [
     "gruntplugin"
   ],
   "dependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "0.4.x",
     "grunt-wiredep": "^2.0.0",
     "grunt-connect-proxy": "~0.1.10",
     "grunt-connect-rewrite": "^0.2.1",
