--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jshint": "~0.7.1",
+    "grunt-rev": "~0.1.0",
     "jshint-stylish": "~0.1.3"
   }
 }
