--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "grunt-recess": "^0.7.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-jshint": "~0.7.1",
     "jshint-stylish": "~0.1.3"
   }
