--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-processhtml": "~0.3.3",
     "grunt-rev": "~0.1.0",
-    "jshint-stylish": "~0.1.3"
+    "jshint-stylish": "~0.1.3",
+    "grunt-contrib-cssmin": "~0.7.0"
   }
 }
