--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-devbliss",
   "description": "The Devbliss GRUNT Plugin",
-  "version": "0.4.0-SNAPSHOT",
+  "version": "0.4.0",
   "homepage": "https://github.com/devbliss/ecosystem-grunt-plugin",
   "author": {
     "name": "Devbliss",
