--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "scripts": {
     "test": "grunt test"
+    "postinstall": "node_modules/protractor/bin/webdriver-manager update"
   },
   "devDependencies": {
     "grunt-contrib-clean": "0.5.x",
