--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
     "postinstall": "node_modules/protractor/bin/webdriver-manager update"
   },
   "devDependencies": {
