--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test",
-    "postinstall": "node_modules/protractor/bin/webdriver-manager update"
+    "test": "grunt test"
   },
   "devDependencies": {
     "grunt-contrib-clean": "0.5.x",
