add jasmine and jasmine-core

--- a/package.json
+++ b/package.json
@@ -68,14 +68,16 @@
     "grunt-usemin": "2.x",
     "grunt-wiredep": "2.x",
     "jshint-stylish": "0.1.x",
-    "karma": "^0.12.31",
+    "jasmine": "2.1.x",
+    "jasmine-core": "2.1.x",
+    "karma": "0.12.x",
     "karma-chrome-launcher": "0.1.x",
     "karma-firefox-launcher": "0.1.x",
-    "karma-jasmine": "0.1.x",
+    "karma-jasmine": "0.2.x",
     "karma-junit-reporter": "0.2.x",
     "karma-phantomjs-launcher": "0.1.x",
     "karma-safari-launcher": "0.1.x",
     "protractor": "1.2.x",
-    "karma-spec-reporter": "0.0.16"
+    "karma-spec-reporter": "0.0.x"
   }
 }
