--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "grunt-contrib-jshint": "0.11.x",
     "grunt-contrib-uglify": "0.6.x",
     "grunt-contrib-watch": "0.5.x",
+    "grunt-eslint": "6.0.x",
     "grunt-karma": "0.10.x",
     "grunt-processhtml": "0.3.x",
     "grunt-protractor-runner": "1.1.x",
@@ -73,7 +74,7 @@
     "karma-junit-reporter": "0.2.x",
     "karma-phantomjs-launcher": "0.1.x",
     "karma-safari-launcher": "0.1.x",
-    "protractor": "1.2.x",
-    "karma-spec-reporter": "0.0.x"
+    "karma-spec-reporter": "0.0.x",
+    "protractor": "1.2.x"
   }
 }
