--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "grunt-devbliss",
-  "description": "The Devbliss GRUNT Plugin",
+  "name": "devbliss-grunt-conventions",
+  "description": "The Devbliss Grunt conventions plugin.",
   "version": "0.10.3",
-  "homepage": "https://github.com/devbliss/ecosystem-grunt-plugin",
+  "homepage": "https://github.com/devbliss/devbliss-grunt-conventions",
   "author": {
     "name": "Devbliss",
     "email": "http://www.devbliss.com",
@@ -10,24 +10,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com:devbliss/ecosystem-grunt-plugin.git"
+    "url": "git@github.com:devbliss/devbliss-grunt-conventions.git"
   },
   "bugs": {
-    "url": "https://github.com/devbliss/ecosystem-grunt-plugin/issues"
+    "url": "https://github.com/devbliss/devbliss-grunt-conventions/issues"
   },
   "main": "Gruntfile.js",
   "licenses": [
     {
-      "type": "Apache",
+      "type": "Apache License",
       "url": "https://github.com/devbliss/ecosystem-grunt-plugin/blob/master/LICENSE-Apache"
-    },
-    {
-      "type": "License",
-      "url": "https://github.com/devbliss/ecosystem-grunt-plugin/blob/master/LICENSE-License"
-    },
-    {
-      "type": "2.0",
-      "url": "https://github.com/devbliss/ecosystem-grunt-plugin/blob/master/LICENSE-2.0"
     }
   ],
   "engines": {
