--- a/package.json
+++ b/package.json
@@ -41,11 +41,10 @@
   ],
   "dependencies": {
     "grunt": "0.4.x",
-    "grunt-connect-proxy": "0.1.x",
     "grunt-connect-rewrite": "0.2.x",
     "grunt-contrib-clean": "0.5.x",
     "grunt-contrib-concat": "0.5.x",
-    "grunt-contrib-connect": "0.10.x",
+    "grunt-contrib-connect": "0.10.1",
     "grunt-contrib-copy": "0.4.x",
     "grunt-contrib-cssmin": "0.7.x",
     "grunt-contrib-htmlmin": "0.1.x",
@@ -54,7 +53,7 @@
     "grunt-eslint": "6.0.x",
     "grunt-karma": "0.10.x",
     "grunt-processhtml": "0.3.x",
-    "grunt-protractor-runner": "2.0.x",
+    "grunt-protractor-runner": "2.0.0",
     "grunt-recess": "0.7.x",
     "grunt-rev": "0.1.x",
     "grunt-usemin": "2.x",
@@ -67,7 +66,6 @@
     "karma-phantomjs-launcher": "0.1.x",
     "karma-safari-launcher": "0.1.x",
     "karma-spec-reporter": "0.0.x",
-    "protractor": "2.0.x",
-    "extend-grunt-plugin": "0.1.x"
+    "protractor": "2.0.0"
   }
 }
