--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "devDependencies": {
     "grunt-contrib-internal": "0.4.x",
-    "grunt-contrib-nodeunit": "0.3.x",
-    "proxy-middleware": "^0.11.0"
+    "grunt-contrib-nodeunit": "0.3.3",
+    "proxy-middleware": "0.11.0"
   },
   "peerDependencies": {
     "grunt": "0.4.x"
